# docs/swagger.json
@@ -4,9 +4,39 @@
         "contact": {}
     },
     "paths": {
+        "/api/test": {
+            "get": {
+                "security": [
+                    {
+                        "securityDefinitions.apikey ApiKeyAuth": []
+                    }
+                ],
+                "description": "test",
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "500": {
+                        "description": "error"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
-                "description": "get users in a group",
+                "description": "login user",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,6 +60,40 @@
                     }
                 }
             }
+        },
+        "/signup": {
+            "post": {
+                "description": "create user",
+                "consumes": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "json",
+                        "name": "signup",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "500": {
+                        "description": "error"
+                    }
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
